commented out email; I'm not ready for that jelly

--- a/scaleConfig.yaml
+++ b/scaleConfig.yaml
@@ -50,8 +50,7 @@ getMoarBeansNow: 300
 
 alertChannels:
   - twitter
-  - email
-
+#  - email
 
 # how many seconds to wait between checking the 'scale'; this can
 # probably be set at 300 (5 minutes) or 600 (10 minutes) or 1800 (30
